--- a/CodingJS-Solutions/index.html
+++ b/CodingJS-Solutions/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Title</title>
+        <title>JS Training</title>
         <script>src="src/index.js"</script>
+        <h1>Solutions to <a href = "https://the-winter.github.io/codingjs/">CodingJS</a></h1>
     </head>
     <body>
-        <p>Text</p>
+        <div e2e-test-id="solutions">
+        <!-- Add Sections by using JS-->
+        </div>
     </body>
 </html>
